examples/test/testpolicy9499.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9499
  namespace: namespace151
spec:
  podSelector:
    matchLabels:
      key34: value37
      key13: value7
      key22: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value37
          key38: value31
          key48: value32
      podSelector:
        matchLabels:
          key25: value21
